--- a/views/leyes/createForm.ejs
+++ b/views/leyes/createForm.ejs
@@ -3,11 +3,11 @@
 <!-- Head -->
 <%- include('../partials/head', {title: 'Crear'}) %>
 <body>
+    <div class="container-fluid background-wrapper">
     <!-- header -->
     <%- include('../partials/headerNavbar') %>
     <!-- /header -->
-
-    <div class="container form-wrapper">
+    <div class="container form-wrapper wide-form">
         <div class="row">
             <div class="col-12">
                 <h2 class="form-title">Formulario de Carga de Leyes</h2>
@@ -52,7 +52,7 @@
                 </div>
             </form>
         </div>
-
+    </div>
     </div>
 
     <!-- footer -->
