--- a/views/leyes/leyesList.ejs
+++ b/views/leyes/leyesList.ejs
@@ -3,18 +3,20 @@
 <!-- Head -->
 <%- include('../partials/head', {title: 'Listado'}) %>
 	<body>
-		<!-- header -->
-		<%- include('../partials/headerNavbar') %>
-		<!-- /header -->
-		<div class="card">
-			<div class="card-body">
-				<div class="leyesList">
-					<% leyes.forEach(element => { %>
-						<ul>
-							<li>Nombre: <%= element.entityTypes.name %> - <%= element.number %> - <%= element.year %></li>	
-							<li class="adjuntos"><a href="../files/leyes/<%= element.file %>"><%= element.file %></a></li>
-						</ul>
-					<% }) %>
+		<div class="container-fluid background-wrapper">
+			<!-- header -->
+			<%- include('../partials/headerNavbar') %>
+			<!-- /header -->
+			<div class="card">
+				<div class="card-body">
+					<div class="leyesList">
+						<% leyes.forEach(element => { %>
+							<ul>
+								<li>Nombre: <%= element.entityTypes.name %> - <%= element.number %> - <%= element.year %></li>	
+								<li class="adjuntos"><a href="../files/leyes/<%= element.file %>"><%= element.file %></a></li>
+							</ul>
+						<% }) %>
+					</div>
 				</div>
 			</div>
 		</div>
