--- a/views/leyes/searchForm.ejs
+++ b/views/leyes/searchForm.ejs
@@ -3,14 +3,14 @@
 <!-- Head -->
 <%- include('../partials/head', {title: 'Búsqueda'}) %>
 	<body>
-		<!-- header -->
-		<%- include('../partials/headerNavbar') %>
-		<!-- /header -->
 		<div class="container-fluid background-wrapper">
+			<!-- header -->
+			<%- include('../partials/headerNavbar') %>
+			<!-- /header -->
 			<div class="container form-wrapper">
 				<div class="row">
 					<div class="col-12">
-						<h2 class="form-title">Busqueda de normas</h2>
+						<h2 class="form-title">Búsqueda de Leyes</h2>
 					</div>
 				</div>
 				<div class="col-12">
