--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -8,4 +8,13 @@
 	<link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
 	<!-- Own Stylesheet -->
 	<link rel="stylesheet" href='/stylesheets/style.css'>
+	<!-- MercadoPago Stylesheet -->
+	<link rel="stylesheet" href='/stylesheets/payment.css'>
+	<!-- Scripts -->
+	<script src="../../javascripts/cdn.jsdelivr.net_npm_popper.js@1.16.1_dist_umd_popper.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+	<script src="../../javascripts/scriptCustom.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="https://sdk.mercadopago.com/js/v2"></script>
 </head>
