--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,11 +3,11 @@
 <!-- Head -->
 <%- include('partials/head', {title: 'Inicio'}) %>
 	<body>
-		<div id="main-div" class="container-fluid">
+		<div class="container-fluid background-wrapper">
+			<!-- <img src="\images\main\law-icon.jpg" class="img-fluid w-100" alt="Imagen Justicia"> -->			
 			<!-- header -->
 			<%- include('partials/headerNavbar') %>
 			<!-- /header -->
-			<!-- <img src="\images\main\law-icon.jpg" class="img-fluid w-100" alt="Imagen de martillo de juez"> -->			
 		</div>
 		<!-- footer -->
 		<%- include('partials/footer') %>
