--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -31,6 +31,10 @@ a {
   height: 60px;
 }
 
+.navbar-toggler-icon {
+  background-image: url('/images/main/align-justify-24-white.png');
+}
+
 .navbar .dropdown-menu {
   background-color: gray;
   opacity: 0.95;
