--- a/views/loginForm.ejs
+++ b/views/loginForm.ejs
@@ -35,7 +35,7 @@
                             <button type="reset" class="btn btn-info btn-sm">Limpiar</button>
                         </div>
                         <div class="form-group signup_link">
-                            <span>No posee una cuenta?</span> <a href="/users/register">Crear una cuenta</a>
+                            <span>No posee una cuenta?</span> <a href="/users/register" class="black-link">Crear una cuenta</a>
                         </div>
                     </div>
                 </form>
