--- a/views/leyes/searchResult.ejs
+++ b/views/leyes/searchResult.ejs
@@ -10,15 +10,34 @@
 			<div class="container result-list">
 				<h3>Resultados</h3>			
 				<% if (data) { %>
-					<% data.forEach(element => { %>
-						<ul>
-							<li>Nombre: <%= element.entityTypes.name %> - <%= element.number %> - <%= element.year %></li>
-							<a href="/leyes/detail/<%= element.id %>">
-								Ver Detalle
-							</a>
-						</ul>
-					<% }) %>
+					<div class="table-wrapper">
+						<table class="table">
+							<thead>
+								<tr>
+									<th scope="col">Tipo</th>
+									<th scope="col">Número</th>
+									<th scope="col">Año</th>
+									<th scope="col">Detalle</th>
+								</tr>
+							</thead>
+							<% data.forEach(element => { %>
+								<tbody>
+									<tr>
+										<td><%= element.entityTypes.name %></td>
+										<td><%= element.number %></td>
+										<td><%= element.year %></td>
+										<td>
+											<a href="/leyes/detail/<%= element.id %>" class="black-link">
+											Ver Detalle
+											</a>
+										</td>
+									</tr>
+								</tbody>					
+							<% }) %>
+						</table>
+					</div>
 				<% } %>
+				<br>
 				<button type="button" class="btn btn-info btn-sm" onclick="history.back()">Volver</button>
 			</div>
 		</div>
