--- a/views/paymentForm copy.ejs
+++ b/views/paymentForm copy.ejs
@@ -17,19 +17,22 @@
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
         <script src="../../javascripts/scriptCustom.js"></script>   
-
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://sdk.mercadopago.com/js/v2"></script>
     </head>    
 <body>
     <div class="container-fluid background-wrapper">
         <!-- header -->
         <%- include('partials/headerNavbar') %>
         <!-- /header -->			
+        <input id="mercado-pago-public-key" value="<%= mercadoPagoPublicKey %>" type="hidden" />
         <main>
             <!-- Shopping Cart -->
             <section class="shopping-cart dark">
                 <div class="container container__cart">
                     <div class="block-heading">
-                        <h2>Shopping Cart</h2>                        
+                        <h2>Shopping Cart</h2>
+                        <p>This is an example of a Mercado Pago integration</p>
                     </div>
                     <div class="content">
                         <div class="row">
@@ -74,6 +77,7 @@
                 <div class="container__payment">
                     <div class="block-heading">
                         <h2>Card Payment</h2>
+                        <p>This is an example of a Mercado Pago integration</p>
                     </div>
                     <div class="form-payment">
                         <div class="products">
@@ -188,5 +192,6 @@
     </div>
     <!-- footer -->
     <%- include('partials/footer') %>
-    <!-- /footer -->    
+    <!-- /footer -->
+    <script type="text/javascript" src="/javascripts/scriptMercadoPago.js" defer></script>        
 <body>
