Se agregan rutinas api de creacion de suscripcion y estado de suscripcion

--- a/views/partials/headerNavbar.ejs
+++ b/views/partials/headerNavbar.ejs
@@ -54,7 +54,7 @@
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="/users/profile">Perfil de Usuario</a>
               <li><hr class="dropdown-divider"></li>
-              <a class="dropdown-item" href="/suscription">Suscripción</a>
+              <a class="dropdown-item" href="/api/suscription">Suscripción</a>
               <li><hr class="dropdown-divider"></li>
               <a class="dropdown-item" href="/users/logout">Cerrar Sesión</a>
               <% if (locals.loggedUser.admin == 1) { %>
