--- a/views/apiResults.ejs
+++ b/views/apiResults.ejs
@@ -9,13 +9,16 @@
 			<!-- /header -->
 			<div id="user-card" class="card">
 				<div class="card-body">
-					<% payMethods.forEach(element => { %>
-						<p>
-							<%= element.id %>
-						</p>
-					<% }) %>
+					<% if (payMethods) { %>
+						<% payMethods.forEach(element => { %>
+							<p>
+								<%= element.id %>
+							</p>
+						<% }) %>					 
+					<% } %>
 					<p>
 						<%= suscription.init_point %>
+						<%= suscription.id %>
 					</p>
 				</div>
 			</div>
