--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -10,7 +10,7 @@
 			<div id="user-card" class="card">
 				<img src="/images/users/<%= user.avatar %>" class="card-img-top" alt="Avatar de usuario">
 				<div class="card-body">
-					<h4>Nombre:<%- ' ' + user.firstName + ' ' + user.lastName %></h4>
+					<h4>Nombre:<%- ' ' + user.first_name + ' ' + user.last_name %></h4>
 					<p class="card-text">Email: <%- user.email %></p>
 				</div>
 			</div>
