se protege el token de mercado pago con dotenv

--- a/views/apiResults.ejs
+++ b/views/apiResults.ejs
@@ -15,6 +15,8 @@
 						<p>Payer id: <span><%= suscription.payer_id %></span></p>
 						<p>Payer Email: <span><%= suscription.payer_email %></span></p>
 						<p>Estado: <span><%= suscription.status %></span></p>
+						<br>
+						<button type="button" class="btn btn-info btn-sm" onclick="history.back()">Volver</button>
 					</p>
 				</div>
 			</div>
